@startuml

/'
Zero or One	|o--
Exactly One	||--
Zero or Many	}o--
One or Many	}|--
'/

entity User{
    *user_pk : number <<generated>>
    --
    email : text <<UC>>
    password : text
}

entity Task{
    *task_pk : number <<generated>>
    --
    label : text
    *list_fk : number <<FK>>
}

entity TaskList{
    *tasklist_pk : number <<generated>>
    --
    label : text
    *user_fk : number <<FK>>
}

TaskList }o--|| User
Task }o--|| TaskList

@enduml